force-app/main/default/objects/Case/fields/Discrepancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Type__c</fullName>
    <label>Discrepancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>100 ee</fullName>
            </value>
            <value>
                <fullName>250 ee</fullName>
            </value>
            <value>
                <fullName>500 ee</fullName>
            </value>
            <value>
                <fullName>50 ee</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable/Return</fullName>
            </value>
            <value>
                <fullName>ACH Account</fullName>
            </value>
            <value>
                <fullName>ACH Request</fullName>
            </value>
            <value>
                <fullName>Active EEs not paid</fullName>
            </value>
            <value>
                <fullName>Adding new states</fullName>
            </value>
            <value>
                <fullName>Adding new WC codes</fullName>
            </value>
            <value>
                <fullName>Additional pay run</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Administration Fees</fullName>
            </value>
            <value>
                <fullName>Agency Correspondence</fullName>
            </value>
            <value>
                <fullName>Amended Returns</fullName>
            </value>
            <value>
                <fullName>Auto Enrollment</fullName>
            </value>
            <value>
                <fullName>AutoPoll</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>Benefit Accruals</fullName>
            </value>
            <value>
                <fullName>Benefits Tracking</fullName>
            </value>
            <value>
                <fullName>Benefit summary report</fullName>
            </value>
            <value>
                <fullName>Billing Adjustments</fullName>
            </value>
            <value>
                <fullName>Biometric Functionality</fullName>
            </value>
            <value>
                <fullName>Bonuses</fullName>
            </value>
            <value>
                <fullName>Calculation Issues</fullName>
            </value>
            <value>
                <fullName>Call Drop</fullName>
            </value>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>