force-app/main/default/objects/Case/fields/Disposition_1__c.field-meta.xml
<CustomField>
    <fullName>Disposition_1__c</fullName>
    <description>Used to describe who is calling 401k/S125 . BJ 7_13</description>
    <label>Disposition 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Level</fullName>
            </value>
            <value>
                <fullName>2nd Level</fullName>
            </value>
            <value>
                <fullName>Add-on Order</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Audit &amp; Reconciliation</fullName>
            </value>
            <value>
                <fullName>BAU 8 - 40 hours</fullName>
            </value>
            <value>
                <fullName>BeneTrac</fullName>
            </value>
            <value>
                <fullName>Branch Operations</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Service Supervisor</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Dedicated Service</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>ERR</fullName>
            </value>
            <value>
                <fullName>Fast Track &lt; 8 hours</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>H &amp; B</fullName>
            </value>
            <value>
                <fullName>Inbound Service</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>MPSC</fullName>
            </value>
            <value>
                <fullName>New Case</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>