force-app/main/default/objects/Case/fields/Disposition_2__c.field-meta.xml
<CustomField>
    <fullName>Disposition_2__c</fullName>
    <description>Second Level For Disposition 1. 401k/S125. BJ 7_13</description>
    <label>Disposition 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disposition_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3(16) Administrator</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Branch - with client</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker/Dealer</fullName>
            </value>
            <value>
                <fullName>Client Retention</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>DSM - Post</fullName>
            </value>
            <value>
                <fullName>DSM - Pre</fullName>
            </value>
            <value>
                <fullName>ERR</fullName>
            </value>
            <value>
                <fullName>External Wholesaler</fullName>
            </value>
            <value>
                <fullName>FA - With Client</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Assistant</fullName>
            </value>
            <value>
                <fullName>HRG</fullName>
            </value>
            <value>
                <fullName>HRG - With Client</fullName>
            </value>
            <value>
                <fullName>HRR</fullName>
            </value>
            <value>
                <fullName>HRS Internal Partner</fullName>
            </value>
            <value>
                <fullName>HRS Manager</fullName>
            </value>
            <value>
                <fullName>Internal Wholesaler</fullName>
            </value>
            <value>
                <fullName>IT Rep</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
            <value>
                <fullName>New Recordkeeper</fullName>
            </value>
            <value>
                <fullName>Non-Contact</fullName>
            </value>
            <value>
                <fullName>Non-HRS Internal Partner</fullName>
            </value>
            <value>
                <fullName>Paychex Sales - Post</fullName>
            </value>
            <value>
                <fullName>Paychex Sales - Pre</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>