force-app/main/default/objects/Case/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>