force-app/main/default/objects/Case/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <formula>Sales_Rep__r.Manager.FirstName + &quot; &quot; + Sales_Rep__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSM</label>
    <type>Text</type>
</CustomField>