force-app/main/default/objects/Case/fields/EAO_Check_Images_Date__c.field-meta.xml
<CustomField>
    <fullName>EAO_Check_Images_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EAO Check Images: Date</label>
    <type>Date</type>
</CustomField>