force-app/main/default/objects/Case/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>