force-app/main/default/objects/Case/fields/ESR_ESRP_Amount__c.field-meta.xml
<CustomField>
    <fullName>ESR_ESRP_Amount__c</fullName>
    <description>Case 26660044</description>
    <label>ESRP Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>