force-app/main/default/objects/Case/fields/ESR_IRS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ESR_IRS_Due_Date__c</fullName>
    <description>Case 26660044</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IRS Due Date</label>
    <type>DateTime</type>
</CustomField>