force-app/main/default/objects/Case/fields/ESR_IRS_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>ESR_IRS_Notice_Type__c</fullName>
    <label>IRS Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ESR_Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Box III</fullName>
            </value>
            <value>
                <fullName>Client Requested</fullName>
            </value>
            <value>
                <fullName>Missing 1094C</fullName>
            </value>
            <value>
                <fullName>Missing 1095C</fullName>
            </value>
            <value>
                <fullName>Non-Filing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pre-Assessment</fullName>
            </value>
            <value>
                <fullName>Print Format</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>