force-app/main/default/objects/Case/fields/EW_Category_2__c.field-meta.xml
<CustomField>
    <fullName>EW_Category_2__c</fullName>
    <description>Added for: ExpenseWire 
Manually Entered or Fed in: Manually 
Brief Description of what this will represent: Field will be used to track ExpenseWire type issues. 
Case#15405156</description>
    <label>EW Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EW_Category_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Enhancements to Flex</fullName>
            </value>
            <value>
                <fullName>Expense Card</fullName>
            </value>
            <value>
                <fullName>Forgot Password</fullName>
            </value>
            <value>
                <fullName>Forgot User ID</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Mileage/Google Mapping</fullName>
            </value>
            <value>
                <fullName>Mobile Upgrades</fullName>
            </value>
            <value>
                <fullName>OCR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QBO</fullName>
            </value>
            <value>
                <fullName>Self Onboarding</fullName>
            </value>
            <value>
                <fullName>SSO/MFA</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Transfer to Dev</fullName>
            </value>
            <value>
                <fullName>Transfer to Payroll Rep</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>User Setup</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>