force-app/main/default/objects/Case/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>