force-app/main/default/objects/Case/fields/External_Department_Transfer__c.field-meta.xml
<CustomField>
    <fullName>External_Department_Transfer__c</fullName>
    <description>Used to select the department that the case is being assigned to.  Workflow is used to update the case record type based on the pick list value chosen.</description>
    <inlineHelpText>Used to select the department that the case is being assigned to.  Workflow is used to update the case record type based on the pick list value chosen.</inlineHelpText>
    <label>External Department Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>General Ledger</fullName>
            </value>
            <value>
                <fullName>HR Online</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>S125</fullName>
            </value>
            <value>
                <fullName>Time and Attendance</fullName>
            </value>
            <value>
                <fullName>401k / S125 Field Support</fullName>
            </value>
            <value>
                <fullName>401k / S125 AM Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>