force-app/main/default/objects/Case/fields/External_Impact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>External_Impact_Frequency__c</fullName>
    <description>How often does the issue occur for a single client, employee, prospects or business partner. Includes current impacts and impacts if CR is not completed</description>
    <inlineHelpText>How often does the issue occur for a single client, employee, prospects or business partners? 

0 = not visible 
1 = one time only, annually or semi-annually 
3 = monthly or quarterly 
5 = daily or weekly</inlineHelpText>
    <label>External Impact Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>