force-app/main/default/objects/Case/fields/External_Impact_Volume__c.field-meta.xml
<CustomField>
    <fullName>External_Impact_Volume__c</fullName>
    <description>Number of likely impacted clients, client employees, prospects or business partners affected annually. Includes current impacts and impacts if CR is not completed.</description>
    <inlineHelpText>Number of likely impacted clients, client employees, prospects or business partners affected annually. 

0 = not visible to the client, client employees, prospects or business partners 
1 =&lt;1,000 
3 = 1,000 - 50,000 
5 = &gt;50,000</inlineHelpText>
    <label>External Impact Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>