force-app/main/default/objects/Case/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Used as a date marker to follow up on the case. 401k/S125. BJ 7_13
KK 02/16/10 - added to Sales page layouts for use by Sales</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>