force-app/main/default/objects/Case/fields/Follow_Up_Work__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Work__c</fullName>
    <description>For ESR</description>
    <label>Follow Up Work</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analysis &amp; Monitoring</fullName>
            </value>
            <value>
                <fullName>Awaiting System Updates/Processing</fullName>
            </value>
            <value>
                <fullName>Awaiting Updates/Corrections from Client</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Client/Contact Updates</fullName>
            </value>
            <value>
                <fullName>Data Update Request</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Missing Data</fullName>
            </value>
            <value>
                <fullName>Training - A&amp;M</fullName>
            </value>
            <value>
                <fullName>Training Year End Filing</fullName>
            </value>
            <value>
                <fullName>Year End Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>