force-app/main/default/objects/Case/fields/FSA_Cancel_ppwk_sent__c.field-meta.xml
<CustomField>
    <fullName>FSA_Cancel_ppwk_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FSA Cancel ppwk sent</label>
    <type>Date</type>
</CustomField>