force-app/main/default/objects/Case/fields/Government_Agency__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used by PEO Tax to populate conga template letters to government agencies</description>
    <label>Government Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>01270000000UOnp</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Government Agency)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>