force-app/main/default/objects/Case/fields/Home_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Email_Address__c</fullName>
    <description>This is the Contact&apos;s Home email address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Email Address (Contact)</label>
    <type>Email</type>
</CustomField>