force-app/main/default/objects/Case/fields/HR_Generalist__c.field-meta.xml
<CustomField>
    <fullName>HR_Generalist__c</fullName>
    <formula>Account.HR_Generalist__r.FirstName + &apos; &apos; +  Account.HR_Generalist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Generalist</label>
    <type>Text</type>
</CustomField>