force-app/main/default/objects/Case/fields/HRS4SCategory1__c.field-meta.xml
<CustomField>
    <fullName>HRS4SCategory1__c</fullName>
    <description>Category 1 field for the 401k/S125 Group.</description>
    <label>H_Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admin Security Verified</fullName>
            </value>
            <value>
                <fullName>ASO PBA Qualified Leads</fullName>
            </value>
            <value>
                <fullName>Billing 401k</fullName>
            </value>
            <value>
                <fullName>Billing S125</fullName>
            </value>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Client Retention 401k</fullName>
            </value>
            <value>
                <fullName>Client Retention S125</fullName>
            </value>
            <value>
                <fullName>Communications/Reports S125</fullName>
            </value>
            <value>
                <fullName>Communications 401k</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Enrollment/Contributions</fullName>
            </value>
            <value>
                <fullName>Enrollment/Contributions S125</fullName>
            </value>
            <value>
                <fullName>ePlan</fullName>
            </value>
            <value>
                <fullName>FA Support Tier 2</fullName>
            </value>
            <value>
                <fullName>FSA Debit Card</fullName>
            </value>
            <value>
                <fullName>Funds 401k</fullName>
            </value>
            <value>
                <fullName>Information Change 401k</fullName>
            </value>
            <value>
                <fullName>Information Change S125</fullName>
            </value>
            <value>
                <fullName>IVR 401(k)</fullName>
            </value>
            <value>
                <fullName>IVR S125</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>NPR S125</fullName>
            </value>
            <value>
                <fullName>Onboarding Exception – 401(k)</fullName>
            </value>
            <value>
                <fullName>Onboarding Exception – S125</fullName>
            </value>
            <value>
                <fullName>Ops-5500 Team</fullName>
                <label>Ops - 5500 Team</label>
            </value>
            <value>
                <fullName>Ops - Advisor Support</fullName>
            </value>
            <value>
                <fullName>Ops - CAT 401K</fullName>
            </value>
            <value>
                <fullName>Ops - CAT FSA</fullName>
            </value>
            <value>
                <fullName>Ops - Client Changes 401K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>