force-app/main/default/objects/Case/fields/Is_Created_by_Mid_Market_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_by_Mid_Market_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field - This is set up to true through the  Mid Market Create Case Flow , it should be hidden from the UI so if the user  is trying to create a case with the regular UI, choosing the record type. It will display an error through a validation rule where it will indicate to create this case record type through the flow</description>
    <label>Is Created by Mid-Market Flow?</label>
    <type>Checkbox</type>
</CustomField>