force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing / Pricing 401k</fullName>
            </value>
            <value>
                <fullName>Client Retention 401k</fullName>
            </value>
            <value>
                <fullName>Compliance Test 401k</fullName>
            </value>
            <value>
                <fullName>Contributions - Employee 401k</fullName>
            </value>
            <value>
                <fullName>Contributions - Employer 401k</fullName>
            </value>
            <value>
                <fullName>Discrepancy Resolution</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Enrollment 401k</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Fee Disclosure</fullName>
            </value>
            <value>
                <fullName>Form 1099R</fullName>
            </value>
            <value>
                <fullName>Form 5500/8955/5558</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>Implementation Service</fullName>
            </value>
            <value>
                <fullName>Information Change 401k</fullName>
            </value>
            <value>
                <fullName>In-Kind Request</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Other Communication 401k</fullName>
            </value>
            <value>
                <fullName>Payroll Service</fullName>
            </value>
            <value>
                <fullName>Pension Online</fullName>
            </value>
            <value>
                <fullName>Plan Options / Elections 401k</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>PSC IRA</fullName>
            </value>
            <value>
                <fullName>Quarterly Package</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Term / Transfer / Reload 401k</fullName>
            </value>
            <value>
                <fullName>TrueChoice 401k</fullName>
            </value>
            <value>
                <fullName>Web 401k</fullName>
            </value>
            <value>
                <fullName>Billing_Issue</fullName>
                <label>Billing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>