force-app/main/default/objects/Case/fields/Known_Issue__c.field-meta.xml
<CustomField>
    <fullName>Known_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Known Issue?</label>
    <type>Checkbox</type>
</CustomField>