force-app/main/default/objects/Case/fields/Level2AlertDateTime__c.field-meta.xml
<CustomField>
    <fullName>Level2AlertDateTime__c</fullName>
    <description>DateTime after which alert should be sent to Level1 Supervisor - calculated by trigger setAlertTimeStamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Level2 Alert DateTime</label>
    <type>DateTime</type>
</CustomField>