force-app/main/default/objects/Case/fields/Lost_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Lost_Client_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lost Client Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>