force-app/main/default/objects/Case/fields/MailingLink2__c.field-meta.xml
<CustomField>
    <fullName>MailingLink2__c</fullName>
    <description>text to create a link</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingLink2</label>
    <type>Url</type>
</CustomField>