force-app/main/default/objects/Case/fields/Manager_Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Escalation_Comments__c</fullName>
    <description>used by Enterprise Support, fed by Service Now
required iv Manager Escalation Needed is checked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Escalation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>